--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,12 +26,18 @@
             android:name=".DetailActivity"
             android:label="Item Detail"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".EditActivity"
+        <activity
+            android:name=".EditActivity"
             android:label="Edit Item"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
+
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" />
+
+        <activity android:name=".AddActivity"
+            android:label="Add new Item"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
